# segmentation-models-burn

./: Cargo.toml  LICENSE  README.md
src/: activation.rs  download.rs  lib.rs  model.rs  segmentation_head.rs
src/decoder/: mod.rs
src/decoder/unetplusplus/: conv2drelu.rs  decoder.rs  mod.rs
src/encoder/: mod.rs
src/encoder/efficientnet/: conv_norm.rs  efficientnet.rs  inverted_residual.rs  mod.rs  presets.rs
src/encoder/resnet/: block.rs  mod.rs  presets.rs  resnet.rs  weights.rs
weights/: .gitignore  README.md  pyproject.toml
weights/input/: download-efficientnet.sh  download-efficientnetadv.sh
weights/src/weights/: __main__.py
