[package]
name = "segmentation-models-burn"
version = "0.1.0"
edition = "2021"

[features]
default = ["pretrained"]
pretrained = ["burn/network"]

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git" }
burn-import = { git = "https://github.com/tracel-ai/burn.git" }
dirs = "5.0.1"
serde = "1"
